apps/public/blog/remark42/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remark42-web
  namespace: blog
spec:
  selector:
    app: remark42
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
